started adding ToDoService

--- a/src/MyHelpersApp.API/MyHelpersApp.API/MyHelpersApp.API.csproj
+++ b/src/MyHelpersApp.API/MyHelpersApp.API/MyHelpersApp.API.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyHelpersApp.BL\MyHelpersApp.BL.csproj" />
     <ProjectReference Include="..\MyHelpersApp.DAL\MyHelpersApp.DAL.csproj" />
     <ProjectReference Include="..\MyHelpersApp.Data\MyHelpersApp.Data.csproj" />
   </ItemGroup>
