--- a/src/MyHelpersApp.API/MyHelpersApp.Tests/MyHelpersApp.Tests.csproj
+++ b/src/MyHelpersApp.API/MyHelpersApp.Tests/MyHelpersApp.Tests.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MyHelpersApp.API\MyHelpersApp.API.csproj" />
+    <ProjectReference Include="..\MyHelpersApp.BL\MyHelpersApp.BL.csproj" />
     <ProjectReference Include="..\MyHelpersApp.Data\MyHelpersApp.Data.csproj" />
   </ItemGroup>
 
